初步实现Stream消息通信